# CBit_Compiler

./: .gitignore  README.md
.github/workflows/: ci.yml
compiler/: CMakeLists.txt  TODO
compiler/dev/: CMakeLists.txt  main.cpp
compiler/dev/inc/common/: Assert.hpp  CompilerOptions.hpp  CompilerReporter.hpp  Globals.hpp  OptionParser.hpp  Options.def  Types.hpp  Utils.hpp
compiler/dev/inc/frontend/: Lexer.hpp  Token.hpp
compiler/dev/src/common/: CMakeLists.txt  CompilerOptions.cpp  CompilerReporter.cpp  OptionParser.cpp  Utils.cpp
compiler/dev/src/frontend/: CMakeLists.txt  Lexer.cpp  Makefile  Token.cpp  lexer.cpp
compiler/regressions/: Makefile  lit.cfg
compiler/regressions/lexer/: basic1.c  basic1.lex  basic2.c  basic2.expected  binaryNumbers.c
compiler/tests/: main.cpp
compiler/tests/frontend/: Lexer-test.cpp
compiler/tests/frontend/input-test-cases/: input1.in
compiler/tests/utils/: CompilerOptions-test.cpp  option-parser.cpp
scripts/github/: buildCompiler.sh  buildTests.sh  confgiureBuild.sh  configureRegressionTests.sh  configureTests.sh  runRegressionTests.sh  runTests.sh  runUnitTests.sh
